# greedySnake

./: CMakeLists.txt  README.md
include/: Fruit.h  FruitCount.h  FruitFactory.h  GameScreen.h  Settings.h  SettingsScreen.h  Snake.h  SnakeNode.h
src/: Fruit.cpp  FruitFactory.cpp  Game.cpp  GameScreen.cpp  MenuScreen.cpp  Settings.cpp  SettingsScreen.cpp  Snake.cpp  SnakeNode.cpp  main.cpp
